--- a/src/main/resources/assets/view0.fxml
+++ b/src/main/resources/assets/view0.fxml
@@ -1,29 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #EEEEEE;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.Controller0">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exemple pool de tasques" wrappingWidth="560.13671875" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="4.0">
-         <font>
-            <Font size="35.0" />
-         </font>
-      </Text>
-      <Button fx:id="button0" layoutX="586.0" layoutY="14.0" mnemonicParsing="false" onAction="#animateToView1" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="Completable Future" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="8.0">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="button1" layoutX="188.0" layoutY="283.0" mnemonicParsing="false" onAction="#runTask" prefHeight="25.0" prefWidth="200.0" style="-fx-background-color: white;" text="Activar tasques">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Label fx:id="percentatge0" layoutX="520.0" layoutY="292.0" prefHeight="17.0" prefWidth="52.0" text="0%" />
-      <Label fx:id="percentatge1" layoutX="592.0" layoutY="292.0" prefHeight="17.0" prefWidth="52.0" text="0%" />
+      <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-border-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Button layoutX="494.0" layoutY="11.0" mnemonicParsing="false" text="Vista 1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <Text layoutX="236.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vista 0" textAlignment="CENTER" AnchorPane.bottomAnchor="7.9248046875" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="235.7431640625" AnchorPane.topAnchor="7.1533203125">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="7.0" layoutY="50.0" prefHeight="338.0" prefWidth="800.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
+         <children>
+            <ProgressBar fx:id="task1Bar" layoutX="14.0" layoutY="112.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="50.0" />
+            <ProgressBar fx:id="task2Bar" layoutX="14.0" layoutY="197.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="150.0" />
+            <ProgressBar fx:id="task3Bar" layoutX="14.0" layoutY="273.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="250.0" />
+            <Button fx:id="task1Button" layoutX="415.0" layoutY="39.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
+            <Button fx:id="task2Button" layoutX="415.0" layoutY="139.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
+            <Button fx:id="task3Button" layoutX="415.0" layoutY="239.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
+            <Text layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 1, 0%">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Text>
+            <Text layoutX="14.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 2, 0%">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Text>
+            <Text layoutX="14.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 3, 0%">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Text>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
