--- a/src/main/resources/assets/view1.fxml
+++ b/src/main/resources/assets/view1.fxml
@@ -2,50 +2,61 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-border-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button layoutX="494.0" layoutY="11.0" mnemonicParsing="false" text="Vista 1">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Text layoutX="236.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vista 0" textAlignment="CENTER" AnchorPane.bottomAnchor="7.9248046875" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="235.7431640625" AnchorPane.topAnchor="7.1533203125">
+            <Text layoutX="236.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vista 1" textAlignment="CENTER" AnchorPane.bottomAnchor="7.9248046875" AnchorPane.leftAnchor="236.0" AnchorPane.rightAnchor="235.7431640625" AnchorPane.topAnchor="7.1533203125">
                <font>
                   <Font size="30.0" />
                </font>
             </Text>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="7.0" layoutY="50.0" prefHeight="338.0" prefWidth="800.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
+      <AnchorPane layoutX="7.0" layoutY="50.0" prefHeight="340.0" prefWidth="800.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
          <children>
-            <ProgressBar fx:id="task1Bar" layoutX="14.0" layoutY="112.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="50.0" />
-            <ProgressBar fx:id="task2Bar" layoutX="14.0" layoutY="197.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="150.0" />
-            <ProgressBar fx:id="task3Bar" layoutX="14.0" layoutY="273.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="250.0" />
-            <Button fx:id="task1Button" layoutX="415.0" layoutY="39.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
-            <Button fx:id="task2Button" layoutX="415.0" layoutY="139.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
-            <Button fx:id="task3Button" layoutX="415.0" layoutY="239.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
-            <Text layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 1, 0%">
+            <ProgressBar fx:id="task1Bar" layoutX="30.0" layoutY="122.0" prefHeight="28.0" prefWidth="533.0" progress="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="122.0" />
+            <Button fx:id="task1Button" layoutX="30.0" layoutY="25.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" AnchorPane.leftAnchor="40.0" />
+            <Button fx:id="task2Button" layoutX="433.0" layoutY="25.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" AnchorPane.rightAnchor="40.0" />
+            <Text layoutX="30.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Progrés, 0 de 0:" AnchorPane.leftAnchor="30.0">
                <font>
                   <Font size="16.0" />
                </font>
             </Text>
-            <Text layoutX="14.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 2, 0%">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Text>
-            <Text layoutX="14.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 3, 0%">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Text>
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="29.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="30.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="31.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="30.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="29.0" layoutY="248.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="39.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="41.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="39.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="110.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="51.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="110.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="110.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="150.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="51.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="150.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="150.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="59.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="190.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="61.0" layoutY="243.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="190.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="59.0" layoutY="278.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="190.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="230.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="230.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="230.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="270.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="270.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="270.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="310.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="310.0" />
+            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="310.0" />
          </children>
       </AnchorPane>
    </children>
