--- a/src/main/resources/assets/view0.fxml
+++ b/src/main/resources/assets/view0.fxml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.Controller0">
    <children>
-      <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-border-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane prefHeight="50.0" prefWidth="575.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="494.0" layoutY="11.0" mnemonicParsing="false" text="Vista 1">
+            <Button fx:id="buttonVista1" layoutX="494.0" layoutY="11.0" mnemonicParsing="false" text="Vista 1">
                <font>
                   <Font size="14.0" />
                </font>
@@ -28,24 +28,33 @@
             <ProgressBar fx:id="task1Bar" layoutX="14.0" layoutY="112.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="50.0" />
             <ProgressBar fx:id="task2Bar" layoutX="14.0" layoutY="197.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="150.0" />
             <ProgressBar fx:id="task3Bar" layoutX="14.0" layoutY="273.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="250.0" />
-            <Button fx:id="task1Button" layoutX="415.0" layoutY="39.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
-            <Button fx:id="task2Button" layoutX="415.0" layoutY="139.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
-            <Button fx:id="task3Button" layoutX="415.0" layoutY="239.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" />
-            <Text layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 1, 0%">
+            <Button fx:id="buttonTask1" layoutX="415.0" layoutY="39.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
+            <Button fx:id="buttonTask2" layoutX="415.0" layoutY="139.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
+            <Button fx:id="buttonTask3" layoutX="415.0" layoutY="239.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
+               <font>
+                  <Font size="20.0" />
+               </font></Button>
+            <Label fx:id="task1" layoutX="14.0" layoutY="27.0" text="Tasca 1, 0%">
                <font>
                   <Font size="16.0" />
                </font>
-            </Text>
-            <Text layoutX="14.0" layoutY="144.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 2, 0%">
+            </Label>
+            <Label fx:id="task2" layoutX="14.0" layoutY="127.0" text="Tasca 2, 0%">
                <font>
                   <Font size="16.0" />
                </font>
-            </Text>
-            <Text layoutX="14.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tasca 3, 0%">
+            </Label>
+            <Label fx:id="task3" layoutX="14.0" layoutY="227.0" text="Tasca 3, 0%">
                <font>
                   <Font size="16.0" />
                </font>
-            </Text>
+            </Label>
          </children>
       </AnchorPane>
    </children>
