--- a/src/main/resources/assets/view1.fxml
+++ b/src/main/resources/assets/view1.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="575.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.Controller1">
    <children>
       <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button layoutX="494.0" layoutY="11.0" mnemonicParsing="false" text="Vista 1">
+            <Button fx:id="buttonVista0" layoutX="14.0" layoutY="13.0" mnemonicParsing="false" text="Vista 0">
                <font>
                   <Font size="14.0" />
                </font>
@@ -25,38 +26,44 @@
       </AnchorPane>
       <AnchorPane layoutX="7.0" layoutY="50.0" prefHeight="340.0" prefWidth="800.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0">
          <children>
-            <ProgressBar fx:id="task1Bar" layoutX="30.0" layoutY="122.0" prefHeight="28.0" prefWidth="533.0" progress="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="122.0" />
-            <Button fx:id="task1Button" layoutX="30.0" layoutY="25.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" AnchorPane.leftAnchor="40.0" />
-            <Button fx:id="task2Button" layoutX="433.0" layoutY="25.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Button" AnchorPane.rightAnchor="40.0" />
-            <Text layoutX="30.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Progrés, 0 de 0:" AnchorPane.leftAnchor="30.0">
+            <ProgressBar fx:id="progressBarV1" layoutX="32.0" layoutY="124.0" prefHeight="28.0" prefWidth="520.0" progress="0.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="123.0" />
+            <Button fx:id="buttonCarregar" layoutX="30.0" layoutY="25.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Carregar" AnchorPane.leftAnchor="40.0">
+               <font>
+                  <Font name="System Bold" size="17.0" />
+               </font></Button>
+            <Button fx:id="buttonAturar" layoutX="433.0" layoutY="25.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Aturar" AnchorPane.rightAnchor="40.0">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font></Button>
+            <Label fx:id="textProgress" layoutX="32.0" layoutY="96.0" text="Progrés, 0 de 0:">
                <font>
                   <Font size="16.0" />
                </font>
-            </Text>
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="29.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="30.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="31.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="30.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="29.0" layoutY="248.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="39.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="41.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="39.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="110.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="51.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="110.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="110.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="150.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="51.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="150.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="150.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="59.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="190.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="61.0" layoutY="243.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="190.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="59.0" layoutY="278.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="190.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="230.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="230.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="230.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="270.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="270.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="270.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="310.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="310.0" />
-            <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="310.0" />
+            </Label>
+            <ImageView fx:id="img1" fitHeight="25.0" fitWidth="25.0" layoutX="29.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="30.0" />
+            <ImageView fx:id="img2" fitHeight="25.0" fitWidth="25.0" layoutX="31.0" layoutY="213.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="30.0" />
+            <ImageView fx:id="img3" fitHeight="25.0" fitWidth="25.0" layoutX="29.0" layoutY="248.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="30.0" />
+            <ImageView fx:id="img4" fitHeight="25.0" fitWidth="25.0" layoutX="39.0" layoutY="180.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="70.0" />
+            <ImageView fx:id="img5" fitHeight="25.0" fitWidth="25.0" layoutX="41.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="70.0" />
+            <ImageView fx:id="img6" fitHeight="25.0" fitWidth="25.0" layoutX="39.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="70.0" />
+            <ImageView fx:id="img7" fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="110.0" />
+            <ImageView fx:id="img8" fitHeight="25.0" fitWidth="25.0" layoutX="51.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="110.0" />
+            <ImageView fx:id="img9" fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="110.0" />
+            <ImageView fx:id="img10" fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="150.0" />
+            <ImageView fx:id="img11" fitHeight="25.0" fitWidth="25.0" layoutX="51.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="150.0" />
+            <ImageView fx:id="img12" fitHeight="25.0" fitWidth="25.0" layoutX="49.0" layoutY="268.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="150.0" />
+            <ImageView fx:id="img13" fitHeight="25.0" fitWidth="25.0" layoutX="59.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="190.0" />
+            <ImageView fx:id="img14" fitHeight="25.0" fitWidth="25.0" layoutX="61.0" layoutY="243.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="190.0" />
+            <ImageView fx:id="img15" fitHeight="25.0" fitWidth="25.0" layoutX="59.0" layoutY="278.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="190.0" />
+            <ImageView fx:id="img16" fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="230.0" />
+            <ImageView fx:id="img17" fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="230.0" />
+            <ImageView fx:id="img18" fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="230.0" />
+            <ImageView fx:id="img19" fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="270.0" />
+            <ImageView fx:id="img20" fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="270.0" />
+            <ImageView fx:id="img21" fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="270.0" />
+            <ImageView fx:id="img22" fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="310.0" />
+            <ImageView fx:id="img23" fitHeight="25.0" fitWidth="25.0" layoutX="71.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="310.0" />
+            <ImageView fx:id="img24" fitHeight="25.0" fitWidth="25.0" layoutX="69.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="310.0" />
          </children>
       </AnchorPane>
    </children>
