--- a/src/main/resources/assets/view0.fxml
+++ b/src/main/resources/assets/view0.fxml
@@ -11,7 +11,7 @@
    <children>
       <AnchorPane prefHeight="50.0" prefWidth="575.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button fx:id="buttonVista1" layoutX="494.0" layoutY="11.0" mnemonicParsing="false" text="Vista 1">
+            <Button fx:id="buttonVista1" layoutX="494.0" layoutY="11.0" mnemonicParsing="false" onAction="#animateToView1" text="Vista 1">
                <font>
                   <Font size="14.0" />
                </font>
@@ -28,15 +28,15 @@
             <ProgressBar fx:id="task1Bar" layoutX="14.0" layoutY="112.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="50.0" />
             <ProgressBar fx:id="task2Bar" layoutX="14.0" layoutY="197.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="150.0" />
             <ProgressBar fx:id="task3Bar" layoutX="14.0" layoutY="273.0" prefHeight="28.0" prefWidth="335.0" progress="0.0" AnchorPane.topAnchor="250.0" />
-            <Button fx:id="buttonTask1" layoutX="415.0" layoutY="39.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
+            <Button fx:id="buttonTask1" layoutX="415.0" layoutY="39.0" mnemonicParsing="false" onAction="#runTask1" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
                <font>
                   <Font size="20.0" />
                </font></Button>
-            <Button fx:id="buttonTask2" layoutX="415.0" layoutY="139.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
+            <Button fx:id="buttonTask2" layoutX="415.0" layoutY="139.0" mnemonicParsing="false" onAction="#runTask2" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
                <font>
                   <Font size="20.0" />
                </font></Button>
-            <Button fx:id="buttonTask3" layoutX="415.0" layoutY="239.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
+            <Button fx:id="buttonTask3" layoutX="415.0" layoutY="239.0" mnemonicParsing="false" onAction="#runTask3" prefHeight="50.0" prefWidth="100.0" text="Iniciar">
                <font>
                   <Font size="20.0" />
                </font></Button>
