--- a/src/main/resources/assets/view1.fxml
+++ b/src/main/resources/assets/view1.fxml
@@ -12,7 +12,7 @@
    <children>
       <AnchorPane prefHeight="50.0" prefWidth="200.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="300.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button fx:id="buttonVista0" layoutX="14.0" layoutY="13.0" mnemonicParsing="false" text="Vista 0">
+            <Button fx:id="buttonVista0" layoutX="14.0" layoutY="13.0" mnemonicParsing="false" onAction="#animateToView0" text="Vista 0">
                <font>
                   <Font size="14.0" />
                </font>
